# directx11-engine

./: .gitignore  CMakeLists-assimp.txt  CMakeLists.txt  Engine.h  REDME.MD
shader/: BlendedPhongPS.hlsl  BlendedPhongVS.hlsl  pixel-shader.hlsl  vertex-shader.hlsl
src/: Engine.h  WinEntry.h
src/common/: Logger.cpp  Logger.h  Time.cpp  Time.h
src/component/: ImguiManager.h  Logger.cpp  Logger.h  Simulation.cpp  Simulation.h  Time.h
src/component/gdiplus/: GDIPlusManager.cpp  GDIPlusManager.h
src/component/imgui/: imgui.h  imgui_impl_dx11.h  imgui_impl_win32.h  imgui_widgets.cpp
src/component/pipeline/: Bindable.h  BindableBase.h  BindableCodex.h  ConstantBuffers.h  Drawable.h  DrawableBase.h  IndexBuffer.h  InputLayout.h  PixelShader.h  Topology.h  TransformCbuf.h  Vertex.h  VertexBuffer.h  VertexShader.h
src/component/pipeline/private/: Bindable.cpp  Drawable.cpp  IndexBuffer.cpp  InputLayout.cpp  PixelShader.cpp  Topology.cpp  TransformCbuf.cpp  Vertex.cpp  VertexBuffer.cpp  VertexShader.cpp
src/core/: Core.h  CoreDef.h  CoreMacro.h  CoreMin.h  PerGameSettings.cpp  PerGameSettings.h  WinSDK.h
src/core/private/: CoreMin.cpp  PerGameSettings.cpp
src/engine/: GDIPlusManager.cpp  GDIPlusManager.h  OEngine.h  Simulation.h  SplashScreen.cpp  SplashScreen.h
src/engine/private/: OEngine.cpp  Simulation.cpp  SplashScreen.cpp
src/exception/: COMException.h  EngineException.cpp  EngineException.h  Exception.h  WindowException.h
src/interface/: Camera.cpp  Camera.h  Graphics.h  IApplication.h  Keyboard.h  Mouse.h  Panel.h
src/interface/Bindable/: Bindable.h  ConstantBuffers.h  IndexBuffer.h  InputLayout.h  Topology.h  TransformCbuf.h  VertexBuffer.h  VertexShader.h
src/interface/Bindable/private/: Bindable.cpp  IndexBuffer.cpp  TransformCbuf.cpp  VertexBuffer.cpp  VertexShader.cpp
src/interface/Drawable/: Box.cpp  Box.h  Drawable.cpp  Drawable.h  Melon.cpp  Melon.h  Pyramid.cpp  Pyramid.h  Sampler.cpp  Sampler.h  Sheet.cpp  Sheet.h  SkinnedBox.cpp  SkinnedBox.h  Surface.cpp  Texture.cpp  Texture.h
src/interface/Drawable/oggetti/: Cone.h  Cube.h  Prism.h  Sphere.h
src/interface/private/: Camera.cpp  Graphics.cpp  Keyboard.cpp  Mouse.cpp  Panel.cpp
src/libs/: ImguiManager.h
src/libs/imgui/: imgui.h  imgui_impl_win32.h
src/model/: Box.cpp  Box.h  ChiliMath.h  Color.h  Cylinder.cpp  Cylinder.h  Mesh.cpp  Mesh.h  PointLight.cpp  PointLight.h  Pyramid.cpp  Pyramid.h  Sampler.cpp  Sampler.h  SkinnedBox.cpp  SkinnedBox.h  SolidSphere.cpp  SolidSphere.h  Surface.cpp  Surface.h  TestAssimpObject.cpp  TestAssimpObject.h  TestObject.h  Texture.cpp  Texture.h
src/model/common/: Cone.h  Cube.h  IndexedTriangleList.h  Plane.h  Prism.h  Sphere.h
src/platform/win32/: IApplication.cpp  IApplication.h  Panel.cpp  Panel.h  SubObject.cpp  SubObject.h  Win32Utils.cpp  Win32Utils.h  WinEntry.h  Window.cpp  Window.h
